2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/locate_images.cpp: ensure error is always set,
	  callgraph_container was using an uninitialized value.

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: improve a bit the symbol chosen when
	  multiple symbol live at same vma

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml: some words about UP kernel > 2.6.9 and the need of
	  lapic at boot.

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/common_option.h:
	* pp/common_option.cpp: move threshold option from here ...
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp:
	* pp/opstack_options.cpp: to each of these file using it. Side effect
	  is to remove this option from oparchive which didn't handle it.
	
	* doc/oparchive.1.in:
	* doc/oprofile.xml: there isn't any --threshold option to oparchive

2004-11-07  Kristis Makris  <kristis.makris@asu.edu>

	* doc/internals.xml: fix typo

2004-11-01  Maynard Johnson  <maynardj@us.ibm.com>

	* events/ppc64/970/events: Make min count 10000 for all PM_INST_CMPL;
	  and remove redundant event in group 2
	* events/ppc64/power4/event_mappings: Set LSB of MMCRA so kernel kludge
	  can be removed at some later date
	* events/ppc64/power4/events: Make min counts consistent with ppc970
	* events/ppc64/power5/events: Make min counts consistent with ppc970	  
2004-11-01  Greg Banks  <gnb@melbourne.sgi.com>

	* libop/op_events.c: Make the default sample rate for
	  IA64 sensible (i.e. 10 times smaller).

2004-10-15  Will Cohen  <wcohen@redhat.com>

	* events/ppc64/power4/events: Corrected group 4 counter assignments.

2004-10-15  Maynard Johnson  <maynardj@us.ibm.com>

	* events/Makefile.am:
	* events/ppc64/970/event_mappings:
	* events/ppc64/970/events:
	* events/ppc64/970/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/op_help.c:
	* utils/opcontrol: Added ppc64/970 support.
